cloned_repo - add imgs, link post request

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -19,62 +19,60 @@
         </div>
       </header>
   
-      <main role="main">
-  
-        <section class="jumbotron text-center">
-          <div class="container">
-            <h1 class="jumbotron-heading">Thank you for your order!</h1>
-            <p class="lead text-muted">We ordered 5 items for you and charged your student account on March 23rd 2019 5:15:35 PM.</p>
-          </div>
-        </section>
-  
-        <div class="album py-5 bg-light">
-          <div class="container">
-                <h4 class="mb-3">You have ordered</h4>
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Fruit Name</th>
-                        <th>Quantity</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>Strawberry</td>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <td>Raspberry</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Apple</td>
-                        <td>2</td>
-                    </tr>
-                    </tbody>
-                </table>
-  
-                <h4 class="mb-3">Your Information</h4>
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        First Name: Michael
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        Last Name: Choi
-                    </div>
-                </div>
-  
-                <div class="mb-3">
-                    Your Student ID: 123-456-7890
-                </div>
-              
-                <hr class="mb-4">
-                <a class="btn btn-primary btn-lg btn-block" href="/">Go Back</a>
-            
-          </div>
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Thank you for your order!</h1>
+          <p class="lead text-muted">We ordered {{order}} items for you and charged {{first_name+' '+last_name}} account on {{loctime}}.</p>
         </div>
-  
-      </main>
+      </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+              <h4 class="mb-3">You have ordered</h4>
+              <table class="table table-striped">
+                  <thead>
+                  <tr>
+                      <th>Fruit Name</th>
+                      <th>Quantity</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                      <td>Strawberry</td>
+                      <td>{{strawberry}}</td>
+                  </tr>
+                  <tr>
+                      <td>Raspberry</td>
+                      <td>{{raspberry}}</td>
+                  </tr>
+                  <tr>
+                      <td>Apple</td>
+                      <td>{{apple}}</td>
+                  </tr>
+                  </tbody>
+              </table>
+
+              <h4 class="mb-3">Your Information</h4>
+              <div class="row">
+                  <div class="col-md-6 mb-3">
+                      First Name: {{first_name}}
+                  </div>
+                  <div class="col-md-6 mb-3">
+                      Last Name: {{last_name}}
+                  </div>
+              </div>
+
+              <div class="mb-3">
+                  Your Student ID: {{student_id}}
+              </div>
+            
+              <hr class="mb-4">
+              <a class="btn btn-primary btn-lg btn-block" href="/">Go Back</a>
+          
+        </div>
+      </div>
+
+    </main>
       
 </body>
 </html>
